<resources>
    <string name="app_name">EasyLecture</string>
    <string name="StudentID">Student ID</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="ToQuiz">To Quiz</string>
    <string name="optionA">A</string>
    <string name="optionB">B</string>
    <string name="optionC">C</string>
    <string name="optionD">D</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="enter_name">Enter name</string>
    <string name="select_name">Select name</string>
    <string name="ok">OK</string>
    <string name="FR">Facial Reco</string>
    <string name="initializing">Initializing…</string>
    <string name="training">Training data…</string>
    <string name="try_it_later">Try it again later</string>
    <string name="title_activity_course_home_main">CourseHomeMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Waleed Abu-Nafiseh</string>
    <string name="nav_header_subtitle">waleedabunafiseh@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_quizzes">Quizzes list</string>
    <string name="menu_fr">Facial Recognition</string>
    <string name="menu_calendar">Calendar</string>
    <string name="nav_top_students">Coturse Information</string>
    <string name="StudentPassword">Password</string>
    <string name="select_course">Please select a course</string>
    <string name="areYouInstructor">If you are an instructor, <u>Click here!</u></string>
    <string name="title_activity_instructor_home_page">InstructorHomePageActivity</string>
    <string name="title_activity_instructor_home_page_activityw_d">InstructorHomePageActivitywD
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comming_quizzes">Comming Quizzes:</string>
</resources>