<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.CourseHomeUI.quiz.QuizzingActivity"
    android:id="@+id/quizLayout">

    <ProgressBar
        android:id="@+id/prgsBar"
        android:layout_width="89dp"
        android:layout_height="73dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.27" />

    <TextView
        android:id="@+id/txtQuestionPlace"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:textColor="#000"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnOptionA"
        android:layout_width="300dp"
        android:layout_height="73dp"
        android:background="@drawable/quizzingbtn1background"
        android:hint="@string/optionA"
        android:textColor="#ffff"
        android:textSize="17dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.381" />

    <Button
        android:id="@+id/btnOptionB"
        android:layout_width="300dp"
        android:layout_height="73dp"
        android:background="@drawable/quizzingbtn2background"
        android:hint="@string/optionB"
        android:textColor="#ffff"
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnOptionA"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnOptionA"
        app:layout_constraintTop_toBottomOf="@+id/btnOptionA"
        app:layout_constraintVertical_bias="0.083" />

    <Button
        android:id="@+id/btnOptionC"
        android:layout_width="300dp"
        android:layout_height="73dp"
        android:background="@drawable/quizzingbtn4background"
        android:hint="@string/optionC"
        android:textColor="#ffff"
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnOptionB"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnOptionB"
        app:layout_constraintTop_toBottomOf="@+id/btnOptionB"
        app:layout_constraintVertical_bias="0.125" />

    <Button
        android:id="@+id/btnOptionD"
        android:layout_width="300dp"
        android:layout_height="73dp"
        android:background="@drawable/quizzingbtn3background"
        android:hint="@string/optionD"
        android:textColor="#ffff"
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnOptionC"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnOptionC"
        app:layout_constraintTop_toBottomOf="@+id/btnOptionC"
        app:layout_constraintVertical_bias="0.248" />

    <TextView
        android:id="@+id/txtPoints"
        android:layout_width="210dp"
        android:layout_height="52dp"
        android:gravity="center"
        android:textColor="#000 "
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044" />
</androidx.constraintlayout.widget.ConstraintLayout>